--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -2,25 +2,36 @@
 	background-color: white;
 	width: 100%;
 	height: 70px;
-	border: #DDDDDD 1px solid;
+	border: 1px solid #DDDDDD;
 	border-radius: 4px;
-	display: flex;
-	align-items: center;
+	align-items: left;
 	justify-content: flex-end;
 }
-.b_search {
+.locations{
+	float: left;
+	border-right: 1px solid #DDDDDD;
+	width: 25%;
+}
+.amenities{
+	float: left;
+	border-right: 1px solid #DDDDDD;
+	width: 25%;
+}
+
+button {
 	color: #FFFFFF;
+	margin-top: 10px ;
 	margin-right: 30px;
 	font-size: 18px;
 	background-color: #FF5A5F;
-	width: 20%;
+	width: 25%;
 	height: 48px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	justify-content: left;
+	align-items: left;
 	border: 0;
 	border-radius: 4px;
+	float: right;
 }
-.b_search:hover {
+button:hover {
 	opacity: 90%;
 }
