--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,21 +1,27 @@
-.places>h1 {
-	text-align: left;
-	font-size: 30px;
-}
-.places>div {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-}
-.places article {
-	width: 390px;
-	padding: 20px;
-	margin: 20px;
-	border: #FF5A5F 1px solid;
-	border-radius: 4px;
+.places{
+    width: 100%;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 
 }
-.places article h2 {
-	font size: 30px;
-	text-align: center;
+.places article{
+    font-size: 30px;
+    padding: 20px;
+    margin: 20px;
+    width: 400px;
+    border: 1px solid #FF5A5F;
+    border-radius: 4px;
+    justify-content: center;
+}
+.places h1{
+    font-size: 30px;
+    width: 100%;
+}
+
+.places h2{
+    font-size: 30px;
+    width: 100%;
+    text-align: center;
 }
