--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -66,7 +66,9 @@ section.filters button:hover{
 .popover li{
     padding: 5px;
 }
-
+.popover {
+    display: none;
+}
 .popover ul{
     margin-left: -20px;
     margin-top: -15px;
